# WangsAlgorithm

./: LICENSE  README.md  WangsAlgorithm.cabal  stack.yaml
execs/: LaTeX.hs  Main.hs
src/WangsAlgorithm/: LaTeX.hs  Parser.hs  Proposition.hs  Prover.hs
tests/: tests.hs
